crates/plotnik-lib/tests/02-parser/recovery_validation/branch_label_kebab_case.txt
[My-branch: (a) Other: (b)]
------------------ DIAGNOSTICS -------------------
error: branch labels must be PascalCase
 --> query.ptk:1:2
  |
1 | [My-branch: (a) Other: (b)]
  |  ^^^^^^^^^
  |
help: use `MyBranch`
  |
1 - [My-branch: (a) Other: (b)]
1 + [MyBranch: (a) Other: (b)]
  |
help: branch labels become variants of an enum in the output
